<resources>
    <string name="app_name">Wassertipps</string>
    <string name="title_home">Wassertipps für&#160;</string>
    <string name="title_search">Suche</string>
    <string name="title_wasserinfos">Informationen über unser Wasser</string>
    <string name="title_help">Wassertipps FAQ</string>
    <string name="title_wasserbedarf">Wasserbedarf</string>
    <string name="title_kontakt">Kontakt</string>
    <string name="title_tipps_haerte">Tipps für Ihre Wasserhärte</string>
    <string name="title_tipps_nitrat">Tipps zu Ihrem Nitratwert</string>
    <string name="geolocation_title">Geolocation</string>
    <string name="geolocation_content"><![CDATA[<h4>Es tut uns leid!</h4>
          <p>
              Diese App benötigt zwingend eine Geo-Position in Deutschland, Österreich oder der Schweiz. Außerhalb dieser Länder funktioniert die App nur eingeschränkt. <br>Sie können die allgemeinen Informationen über das Wasser abrufen und auch den Wasserbedarfsrechner verwenden, wenn Sie ihn frei geschaltet haben.
          </p>
          <br>
          <h4>We are sorry!</h4>
          <p>
            This app requires a Geo-Position in Germany, Austria or Switzerland. Outside these countries the app works only limited. <br>You can access the general information about the water and also use the water demand calculator, if you have activated it.
          </p>]]></string>
    <string name="no_internet_title">Internet</string>
    <string name="no_internet_content">Die App benötigt eine Internet Verbindung, um Ihnen die aktuellen Wasserwerte
        anzeigen zu können.
    </string>
    <string name="btn_standort">Strandort freigeben</string>
    <string name="btn_weiter">Weiter</string>
    <string name="intro1_title">Einführung</string>
    <string name="intro1_text">Um Angaben zu Wasserhärte und Nitrat in Ihrer Umgebung zu finden muss Ihr GPS-System
        aktiviert sein.
    </string>
    <string name="intro5_title">Einverständniserklärung</string>
    <string name="intro5_text1_header">Gesundheitsbezogene Hinweise</string>
    <string name="intro5_text1">Unsere App vermittelt standortbezogen Wasserwerte der lokalen Wasserversorger. Die Werte
        wurden nicht von uns selbst ermittelt, sondern beruhen auf Analysen im Auftrag des lokalen Wasserversorgers. Ob
        die vermittelten Wasserwerte zutreffend sind, wird von uns nicht überprüft. Soweit in der App
        gesundheitsbezogene Empfehlungen ausgesprochen werden, stellen diese keine individuelle auf Sie abgestimmte
        Therapie oder medizinische Einschätzung dar. Diese App ersetzt keinesfalls die fachliche Beratung durch einen
        Arzt oder Apotheker. Bei gesundheitlichen Beschwerden wenden Sie sich bitte sofort an einen Arzt.
    </string>
    <string name="intro5_text2_header">Datenschutz</string>
    <string name="intro5_text2">Ihre personenbezogenen Daten unterliegen den geltenden Datenschutzgesetzen. Über unseren
        Umgang mit Ihren Daten und Ihre Rechte informieren wir Sie in unserer
    </string>
    <string name="intro5_text3_header">Nutzungsbedingungen</string>
    <string name="intro5_text3_1">Für die vorliegenden</string>
    <string name="intro5_text3_2">bitten wir Sie uns Ihr Einverständnis zu bestätigen.</string>
    <string name="intro5_text5">und die</string>
    <string name="intro5_text4btn1">Datenschutzerklärung</string>
    <string name="intro5_text4btn2">Nutzungsbedingungen</string>
    <string name="intro5_btnText">Ich erkläre mich mit der Geltung der Nutzungsbedingungen einverstanden. Die
        gesundheitsbezogenen Hinweise habe ich gelesen und verstanden.
    </string>
    <string name="icon_home">Home</string>
    <string name="icon_suche">Suche</string>
    <string name="icon_wasserinfos">Wasserinfos</string>
    <string name="icon_help">FAQ</string>
    <string name="icon_wasserbedarf">Wasserbedarf</string>
    <string name="icon_kontakt">Kontakt</string>
    <string name="wasserhaerte">Wasserhärte</string>
    <string name="nitrat">Nitrat</string>
    <string name="haerte_button">Tipps zur Wasserhärte</string>
    <string name="nitrat_button">Tipps zum Nitratgehalt</string>
    <string name="nitrat_unit">mg/l</string>
    <string name="near">Sie befinden sich an der Grenze mehrerer Versorgungszonen. Durch Ungenauigkeiten, die bei der
        GPS-Ortung auftreten können, werden Ihnen möglicherweise falsche Daten angezeigt. Um sicher zu gehen informieren
        Sie sich bei Ihrer Gemeinde.
    </string>
    <string name="purchase_title">Pro version</string>
    <string name="purchase_content">Möchten Sie die Pro Version erwerben, um den Link zu aktivieren und die Werbung zu
        stoppen?
        Sie unterstützen dadurch unsere Arbeit und helfen uns, die Daten der Wasserversorger regelmäßig in die App
        einfliessen zu lassen.
        Vielen Dank!
    </string>
    <string name="purchase_button">Kaufen - %s</string>
    <string name="title_nodata">Tut uns leid</string>
    <string name="empty">\?</string>
    <string name="text1_nodata">Wir haben leider noch keine Wasserwerte für Ihren Standort. Sie können aber einen Ort in
        Ihrer Umgegend auswählen:
    </string>
    <string name="header1">Ort</string>
    <string name="header2">Entf.</string>
    <string name="header3">Härte</string>
    <string name="header4">Nitrat</string>
    <string name="haerteText1">Sie haben weiches Wasser</string>
    <string name="haerteText2">Sie haben mittelhartes Wasser</string>
    <string name="haerteText3">Sie haben hartes Wasser</string>
    <string name="haerteText4">Sie haben weiches Wasser</string>
    <string name="haerteText5">Sie haben mittelhartes Wasser</string>
    <string name="haerteText6">Sie haben hartes Wasser</string>
    <string name="nitratText1">Der Nitratgehalt ist niedrig</string>
    <string name="nitratText2">Der Nitratgehalt ist mittel</string>
    <string name="nitratText3">Der Nitratgehalt ist hoch</string>
    <string name="nitratText4">Sie haben Mischwasser, der Nitratgehalt kann schwanken.</string>
    <string name="nitratText5">Sie haben Mischwasser, der Nitratgehalt kann hoch sein.</string>
    <string name="nitratText6">Sie haben Mischwasser, der Nitratgehalt kann unterschiedlich hoch sein.</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="dialog_title_1">Sonderfall Wasserenthärtungsanlage</string>
    <string name="dialog_title_2">Zurücksetzen</string>
    <string name="dialog_message_1">Wenn Sie eine Wasserenthärtungsanlage haben, wird Ihre Wasserhärte etwa 5 &#8211; 6
        °dH entsprechen. Wollen Sie diesen Wert in der App verwenden?
    </string>
    <string name="dialog_message_2">Wollen Sie auf die Ursprungswerte zurücksetzen?</string>
    <string name="dialog_button_yes">Ja</string>
    <string name="dialog_button_no">Nein</string>
    <string name="location_setting_title">Standort</string>
    <string name="location_setting_content">Standort ist deaktiviert! Möchten Sie die Standort einschalten?</string>
    <string name="location_setting">Einstellung</string>
    <string name="rechner_text_1">Entsprechend den Referenzwerten der Deutschen Gesellschaft für Ernährung (DGE), können
        Sie hier die Flüssigkeitsmenge ausrechnen, die Ihr Körper täglich an Getränken benötigt (ohne Oxidationswasser
        und Wasserzufuhr durch feste Nahrung).
    </string>
    <string name="rechner_text_2">Außerdem können Sie sich regelmäßig an Ihre Trinkpausen erinnern lassen.
        Empfehlenswert sind hier mehrere kleinere Portionen von 200 - 250ml.
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_string">

        Leitungswasser ist zunächst einmal für den menschliche Gebrauch aufbereitetes Wasser, d.h. es ist biologisch
        neutrales Wasser. Trotzdem ist es für den Gebrauch im Aquarium sehr gut geeignet, es müssen nur einige Dinge
        beachtet werden.

        So sollten Sie bei der Erstauffüllung das Becken mit Kies und Pflanzen bestücken und mehrere Tage oder besser
        ein paar Wochen stehen lassen, damit sich die ersten Mikroorganismen bilden können.

        Im laufenden Betrieb können Sie dann regelmäßig einen kleinen Teil des Wassers gegen frisches Leitungswasser
        ersetzen. Achten Sie dabei nur auf die richtige Temperatur. Wenn Sie kaltes Wasser hinzu geben, können Sie Ihren
        Fischen einen regelrechten Schock verpassen.

        Das Wasser aus Ihrer Leitung ist relativ hart. Bei der Auswahl geeigneter Fische sollten Sie darauf Rücksicht
        nehmen.

        Die meisten Ährenfischartigen (Atheriniformes) kommen sehr gut mit hartem Wasser zurecht. Ebenso einige
        Barschartige (Perciformes), z.B. der bekannte Zebrabuntbarsch (Amatitlania nigrofasciata) und viele
        Zahnkärpflinge (Cyprinodontiformes), am bekanntesten sind sicherlich Guppy und Schwertträger, sowie der
        Goldfisch und der Schleierschwanz, ansonsten aber nur wenige Karpfenartige (Cypriniformes). Im Zweifelsfall kann
        Ihnen ein Zoofachhändler sicherlich noch weitere geeignete Fische nennen.

        Sie sollten ausserdem darauf achten, das die meisten Fische aus diesen Gewässern auch einen höheren PH-Wert
        (7-9) benötigen 1.

        Wenn Sie die Härte Ihres Aquariumwassers verringern wollen, können Sie das Leitungswasser mit destilliertem
        Wasser mischen oder Sie installieren eine Osmose Anlage. Bedenken Sie dabei aber auch, dass viele Wasserpflanzen
        in weichem Wasser schlechter gedeihen als in hartem 2.

        (1) http://www.zierfischverzeichnis.de/wasser/
        (2) http://www.weichwasserfische.de/weichwasser.htm

    </string>
    <string name="round_button_text">Link zur Gemeindeseite bzw. Analyse</string>
    <string name="search_query">https://wassertipps.de/cgi-bin/search.pl?term=%s</string>
    <string name="koerpermasse">Körpermaße</string>
    <string name="sport">Sport</string>
    <string name="stillende_frauen">Stillende Frauen</string>
    <string name="wasser_pro_tag">Wasser pro Tag:</string>
    <string name="mitteilung">Mitteilung</string>
    <string name="gewicht">Gewicht</string>
    <string name="alter">Alter</string>
    <string name="aufwachen">Aufwachen</string>
    <string name="einschlafen">Einschlafen</string>
    <string name="erinnerungen">Erinnerungen</string>
    <string name="wasser_pro_tag_text">Ihr empfohlener Wasserbedarf pro Tag ist %1$s ml. Dieser Wert ist jederzeit nur
        eine Empfehlung. Sie können diesen Wert ändern, die Benachrichtigungen werden dann angepasst.
    </string>
    <string name="mitteilungen_active_title">Mitteilungen aktiviert!</string>
    <string name="mitteilungen_active_text">%dml Wasser alle %d minuten.</string>
    <string name="purchase_locked_title">Nicht verfügbar!</string>
    <string name="purchase_locked_text">Möchten Sie die Pro Version erwerben, um den Wasserbedarfrechner zu aktivieren?
    </string>
    <string name="group_notification_for">This is the %s notification group.</string>
    <string name="notification_title">Deine persönliche Wassererinnerung</string>
    <string name="notification_group">wasserbedarf</string>
    <string name="notification_trink_wasser_text">Trink %sml wasser!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="city_label">City</string>
    <string name="addr_label">Addresse</string>
    <string name="haerte_label">Härte:</string>
    <string name="nitrat_label">Nitrat:</string>
    <string name="blank_entry">--</string>
</resources>