<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="85dp"
                android:id="@+id/fav_listitem">
    <!-- Content -->
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight=".2"
                  android:layout_marginTop="@dimen/basic_text_padding"
                  android:layout_marginStart="@dimen/basic_text_padding"
                  android:layout_marginEnd="@dimen/basic_text_padding"
                  android:orientation="horizontal">
        <TextView
                android:text="@string/city_label"
                android:layout_width="0dp"
                android:layout_weight=".9"
                android:layout_height="wrap_content"
                android:id="@+id/city_name"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/button"
                android:layout_weight=".1"
                android:background="@android:drawable/ic_delete"/>
    </LinearLayout>

    <TextView
            android:text="@string/addr_label"
            android:layout_marginStart="@dimen/basic_text_padding"
            android:layout_marginEnd="@dimen/basic_text_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addresse"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="@dimen/basic_text_padding"
                  android:layout_marginEnd="@dimen/basic_text_padding"
                  android:orientation="horizontal">
        <!-- Härte -->
        <LinearLayout android:layout_width="0dp"
                      android:layout_weight=".5"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <TextView
                    android:text="@string/haerte_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/haerte_label"/>
            <TextView
                    android:text="@string/blank_entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/fav_harte_label"/>
        </LinearLayout>
        <!-- Nitrat -->
        <LinearLayout android:layout_width="0dp"
                      android:layout_weight=".5"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <TextView
                    android:text="@string/nitrat_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/nitrat_label"/>
            <TextView
                    android:text="@string/blank_entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/fav_nitrat_label"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>