<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="100"
                android:paddingStart="@dimen/intro_side_padding"
                android:paddingEnd="@dimen/intro_side_padding"
                android:paddingTop="@dimen/intro_top_padding"
android:orientation="vertical">

    <ScrollView android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="80"
                android:layout_alignParentTop="true"
                android:padding="@dimen/activity_vertical_margin"
                android:background="@drawable/text_layout_bg">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/intro_top_padding">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intro5_title"
                    android:textColor="?attr/colorAppTextPrimary"
                    android:id="@+id/intro5_title"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:textSize="24sp" android:fontFamily="sans-serif" android:layout_centerVertical="true"/>
            <!--Border bottom -->
            <View android:background="?attr/colorAppTextPrimary" android:layout_width="match_parent" android:layout_height="1dp"
                  android:layout_below="@id/intro5_title"
                  android:paddingBottom="@dimen/activity_vertical_margin"/>
            <!--Border bottom -->

            <TextView
                    android:text="@string/intro5_text1_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/basic_text_padding"
                    android:textStyle="bold"
                    android:textColor="?attr/colorAppTextPrimary"
                    android:id="@+id/intro5_text1_header"
                    android:layout_below="@id/intro5_title"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/intro_general_font_size"/>
            <TextView
                    android:text="@string/intro5_text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorAppTextPrimary"
                    android:id="@+id/intro5_text1"
                    android:layout_below="@id/intro5_text1_header"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/intro_general_font_size"
                    android:paddingBottom="@dimen/activity_vertical_margin"/>
            <TextView
                    android:layout_marginTop="@dimen/basic_text_padding"
                    android:text="@string/intro5_text2_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="?attr/colorAppTextPrimary"
                    android:id="@+id/intro5_text2_header"
                    android:layout_below="@id/intro5_text1"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/intro_general_font_size"/>
            <TextView
                    android:text="@string/intro5_text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorAppTextPrimary"
                    android:id="@+id/intro5_text2"
                    android:layout_below="@id/intro5_text2_header"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/intro_general_font_size"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/intro5_text2"
                      android:textColor="?attr/colorAppPrimary"
                      android:text="@string/intro5_text4btn1"
                      android:textSize="@dimen/intro_general_font_size"
                      android:id="@+id/datenschutz_Text"/>
            <TextView
                    android:text="@string/intro5_text3_header"
                    android:layout_marginTop="@dimen/basic_text_padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="?attr/colorAppTextPrimary"
                    android:id="@+id/intro5_text3_header"
                    android:layout_below="@id/datenschutz_Text"
                    android:textSize="@dimen/intro_general_font_size"
                    android:textAlignment="textStart"/>
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/text_container2" android:layout_below="@id/intro5_text3_header">
                <TextView
                        android:text="@string/intro5_text3_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorAppTextPrimary"
                        android:id="@+id/intro5_text3_1"
                        android:layout_below="@id/intro5_text3_header"
                        android:textSize="@dimen/intro_general_font_size"
                        android:textAlignment="textStart"/>
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textColor="?attr/colorAppPrimary"
                          android:textSize="@dimen/intro_general_font_size"
                          android:text="@string/intro5_text4btn2"
                          android:layout_marginStart="@dimen/basic_text_padding"
                          android:layout_below="@id/intro5_text3_1"
                          android:id="@+id/nutzungsbedingung_text"/>
            </LinearLayout>

            <TextView
                    android:text="@string/intro5_text3_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorAppTextPrimary"
                    android:id="@+id/intro5_text3_2"
                    android:layout_below="@id/text_container2"
                    android:textSize="@dimen/intro_general_font_size"
                    android:textAlignment="textStart"
                    android:paddingBottom="@dimen/activity_vertical_margin"/>

            <!--<TextView
                    android:text="@string/intro5_text4"
                    android:id="@+id/intro5_text4"
                    android:layout_below="@id/intro5_text3"
                    android:textColor="?attr/colorAppTextPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/intro_general_font_size"
                    android:paddingBottom="@dimen/activity_vertical_margin"/>
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/intro5_text4"
                      android:id="@+id/intro5_text5"
                      android:orientation="horizontal">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="?attr/colorAppPrimary"
                      android:text="@string/intro5_text4btn1"
                      android:textSize="@dimen/intro_general_font_size"
                      android:id="@+id/datenschutz_Text"/>
            <TextView
                    android:text="@string/intro5_text5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:textColor="?attr/colorAppTextPrimary"
                    android:paddingStart="3sp"
                    android:paddingEnd="2sp"
                    android:textSize="@dimen/intro_general_font_size"
                    android:paddingBottom="@dimen/activity_vertical_margin"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="?attr/colorAppPrimary"
                      android:textSize="@dimen/intro_general_font_size"
                      android:text="@string/intro5_text4btn2"
                      android:id="@+id/nutzungsbedingung_text"/>

        </LinearLayout> -->
            <Button
                    android:text="@string/intro5_btnText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/intro5_text3_2"
                    android:id="@+id/zustimmen"
                    android:background="@drawable/green_button_selector"
                    android:textAllCaps="false"
                    android:textColor="?attr/textWhite"/>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>