<?xml version="1.0" encoding="utf-8"?>
<!--BOX-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_marginTop="@dimen/basic_text_padding"
                android:layout_marginStart="@dimen/basic_text_padding"
                android:layout_marginEnd="@dimen/basic_text_padding"
                android:layout_below="@+id/rechner_text2">
    <!--Title Box-->
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:background="@drawable/rechner_title"
                    android:padding="@dimen/basic_text_padding"
                    android:id="@+id/box_title">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorAppTextPrimary"
                android:id="@+id/box_title1"
                android:text="@string/mitteilung"
                android:textStyle="bold"/>
        <android.support.v7.widget.SwitchCompat android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_centerVertical="true"
                                                android:layout_alignParentEnd="true"
                                                android:theme="@style/SwitchCompatStyle"
                                                />
    </RelativeLayout>
    <!--Content Box-->
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/box_content"
                    android:padding="@dimen/basic_text_padding"
                    android:background="@drawable/rechner_content"
                    android:layout_below="@+id/box_title">
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:padding="@dimen/basic_text_padding"
                        android:background="@drawable/grey_row"
                        android:id="@+id/mitteilung_row1">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_alignParentStart="true"
                      android:text="@string/aufwachen"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/aufwachen_text"
                    android:text="00 : 00"
                    android:textColor="?attr/colorAppPrimary"
                    android:layout_alignParentEnd="true"
                    android:gravity="end"/>
        </RelativeLayout>
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:padding="@dimen/basic_text_padding"
                        android:background="@drawable/white_row"
                        android:id="@+id/mitteilung_row2"
                        android:layout_below="@+id/mitteilung_row1">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_alignParentStart="true"
                      android:text="@string/einschlafen"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/einschlafen_text"
                    android:text="00 : 00"
                    android:textColor="?attr/colorAppPrimary"
                    android:layout_alignParentEnd="true"
                    android:gravity="end"/>
        </RelativeLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:padding="@dimen/basic_text_padding"
                        android:background="@drawable/grey_row"
                        android:id="@+id/mitteilung_row3"
                        android:layout_below="@+id/mitteilung_row2">
            <TextView android:layout_width="0dp"
                      android:layout_weight=".60"
                      android:layout_height="wrap_content"
                      android:layout_alignParentStart="true"
                      android:text="@string/erinnerungen"/>
            <LinearLayout android:layout_width="0dp"
                          android:layout_weight=".40"
                          android:layout_height="40dp"
                          android:layout_alignParentEnd="true"
                          android:orientation="horizontal">
                <Button android:layout_width="0dp"
                        android:layout_weight=".25"
                        android:background="@drawable/button_box_styles"
                        android:textColor="?attr/textWhite"
                        android:layout_height="match_parent"
                        android:text="-"/>
                <EditText android:layout_width="0dp"
                          android:layout_weight=".50" android:layout_height="match_parent"
                          android:background="@drawable/input_box_styles"/>
                <Button android:layout_width="0dp"
                        android:layout_weight=".25"
                        android:background="@drawable/button_box_styles"
                        android:textColor="?attr/textWhite"
                        android:layout_height="match_parent"
                        android:text="+"/>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>